# source-map-tauri

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-16-source-map-tauri-design.md
src/: cli.rs  config.rs  discovery.rs  ids.rs  lib.rs  lsp.rs  main.rs  meili.rs  model.rs  output.rs  projects.rs  rust.rs  scan.rs  security.rs  validate.rs
src/frontend/: hooks.rs  http.rs  mod.rs  swc.rs  tauri_calls.rs  tests.rs
src/linker/: edges.rs  http_flows.rs  mod.rs
src/sourcemaps/: trace.rs
src/tauri_config/: capabilities.rs  effective.rs  mod.rs  permissions.rs
tests/: cli.rs
tests/fixtures/frontend-http-flow/: package.json  tsconfig.json
tests/fixtures/frontend-http-flow/src/components/: LoginModal.tsx  PatientSearch.tsx  PatientSearchContent.tsx  SearchDefaultPanel.tsx  SearchWithHelper.tsx
tests/fixtures/tauri-custom-plugin/: package.json  tsconfig.json  vite.config.ts
tests/fixtures/tauri-custom-plugin/plugins/tauri-plugin-audit/: Cargo.toml
tests/fixtures/tauri-custom-plugin/src-tauri/: tauri.conf.json
tests/fixtures/tauri-custom-plugin/src-tauri/capabilities/: main.json
tests/fixtures/tauri-custom-plugin/src-tauri/src/: lib.rs
tests/fixtures/tauri-custom-plugin/src-tauri/tests/: patient_commands.rs
tests/fixtures/tauri-custom-plugin/src/hooks/: usePatientUpload.test.ts  usePatientUpload.ts
tests/fixtures/tauri-inline-commands/: package.json
tests/fixtures/tauri-inline-commands/src-tauri/: Cargo.toml  tauri.conf.json
(+15 files in other folders)
