[package]
name = "source-map-tauri"
version = "0.4.0"
edition = "2021"
description = "Static Tauri app scanner that emits Meilisearch-ready NDJSON"
license = "MIT"
repository = "https://github.com/dickwu/source-map-tauri"
homepage = "https://github.com/dickwu/source-map-tauri"
documentation = "https://docs.rs/source-map-tauri"
readme = "README.md"
keywords = ["tauri", "meilisearch", "sourcemap", "cli", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
globset = "0.4"
hex = "0.4"
ignore = "0.4"
lsp-types = "0.97.0"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "38.0.2"
swc_ecma_visit = "23.0.0"
thiserror = "1"
toml = "0.8"
url = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
